building the base model

--- a/hyperparameter_optimisation/scripts/optuna.ipynb
+++ b/hyperparameter_optimisation/scripts/optuna.ipynb
@@ -1,12 +1,309 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import the required libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "\n",
     "import optuna"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Spending_USD</th>\n",
+       "      <th>Life_Expectancy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>252.311</td>\n",
+       "      <td>70.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>France</td>\n",
+       "      <td>192.143</td>\n",
+       "      <td>72.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>Great Britain</td>\n",
+       "      <td>123.993</td>\n",
+       "      <td>71.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>150.437</td>\n",
+       "      <td>72.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>326.961</td>\n",
+       "      <td>70.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year        Country  Spending_USD  Life_Expectancy\n",
+       "0  1970        Germany       252.311             70.6\n",
+       "1  1970         France       192.143             72.2\n",
+       "2  1970  Great Britain       123.993             71.9\n",
+       "3  1970          Japan       150.437             72.0\n",
+       "4  1970            USA       326.961             70.9"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the dataset.\n",
+    "df = sns.load_dataset(name='healthexp')\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Spending_USD</th>\n",
+       "      <th>Life_Expectancy</th>\n",
+       "      <th>Country_Canada</th>\n",
+       "      <th>Country_France</th>\n",
+       "      <th>Country_Germany</th>\n",
+       "      <th>Country_Great Britain</th>\n",
+       "      <th>Country_Japan</th>\n",
+       "      <th>Country_USA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>252.311</td>\n",
+       "      <td>70.6</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>192.143</td>\n",
+       "      <td>72.2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>123.993</td>\n",
+       "      <td>71.9</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>150.437</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>326.961</td>\n",
+       "      <td>70.9</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  Spending_USD  Life_Expectancy  Country_Canada  Country_France  \\\n",
+       "0  1970       252.311             70.6           False           False   \n",
+       "1  1970       192.143             72.2           False            True   \n",
+       "2  1970       123.993             71.9           False           False   \n",
+       "3  1970       150.437             72.0           False           False   \n",
+       "4  1970       326.961             70.9           False           False   \n",
+       "\n",
+       "   Country_Germany  Country_Great Britain  Country_Japan  Country_USA  \n",
+       "0             True                  False          False        False  \n",
+       "1            False                  False          False        False  \n",
+       "2            False                   True          False        False  \n",
+       "3            False                  False           True        False  \n",
+       "4            False                  False          False         True  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the dummies for the data.\n",
+    "df_model = pd.get_dummies(data=df)\n",
+    "\n",
+    "df_model.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the model and target data.\n",
+    "X = df_model.drop(labels=['Life_Expectancy'], axis=1)\n",
+    "y = df_model['Life_Expectancy']\n",
+    "\n",
+    "# Split the data into train and test.\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.2, random_state=20240717)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Build the base model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean_absolute_error : 0.7211863636363536\n",
+      "mean_squared_error : 0.9606070863636212\n",
+      "r2_score : 0.9136726372978682\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the model.\n",
+    "rfr = RandomForestRegressor(random_state=20240717)\n",
+    "\n",
+    "# Fit the data to the model.\n",
+    "rfr.fit(X=X_train, y=y_train)\n",
+    "\n",
+    "# Make predictions on the test data.\n",
+    "y_pred = rfr.predict(X=X_test)\n",
+    "\n",
+    "# Get the metrics.\n",
+    "mae = mean_absolute_error(y_true=y_test, y_pred=y_pred)\n",
+    "mse = mean_squared_error(y_true=y_test, y_pred=y_pred)\n",
+    "r2s = r2_score(y_true=y_test, y_pred=y_pred)\n",
+    "\n",
+    "print(f'mean_absolute_error : {mae}\\nmean_squared_error : {mse}\\nr2_score : {r2s}')"
    ]
   },
   {
