--- a/hyperparameter_optimisation/scripts/optuna.ipynb
+++ b/hyperparameter_optimisation/scripts/optuna.ipynb
@@ -9,16 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
-    "\n",
     "import optuna"
    ]
   },
@@ -254,16 +253,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Spending_USD</th>\n",
+       "      <th>Country_Canada</th>\n",
+       "      <th>Country_France</th>\n",
+       "      <th>Country_Germany</th>\n",
+       "      <th>Country_Great Britain</th>\n",
+       "      <th>Country_Japan</th>\n",
+       "      <th>Country_USA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>204</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>3880.842</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>1994</td>\n",
+       "      <td>1420.271</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>2065.133</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>5726.538</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>10451.386</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Year  Spending_USD  Country_Canada  Country_France  Country_Germany  \\\n",
+       "204  2009      3880.842           False            True            False   \n",
+       "116  1994      1420.271           False           False            False   \n",
+       "164  2002      2065.133           False           False            False   \n",
+       "171  2003      5726.538           False           False            False   \n",
+       "261  2018     10451.386           False           False            False   \n",
+       "\n",
+       "     Country_Great Britain  Country_Japan  Country_USA  \n",
+       "204                  False          False        False  \n",
+       "116                  False           True        False  \n",
+       "164                  False           True        False  \n",
+       "171                  False          False         True  \n",
+       "261                  False          False         True  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get the model and target data.\n",
     "X = df_model.drop(labels=['Life_Expectancy'], axis=1)\n",
     "y = df_model['Life_Expectancy']\n",
     "\n",
     "# Split the data into train and test.\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.2, random_state=20240717)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.2, random_state=20240717)\n",
+    "\n",
+    "X_train.head()\n",
+    "# X_test.head()\n",
+    "# y_train.head()\n",
+    "# y_test .head()"
    ]
   },
   {
@@ -290,13 +406,13 @@
    ],
    "source": [
     "# Define the model.\n",
-    "rfr = RandomForestRegressor(random_state=20240717)\n",
+    "rfr_base = RandomForestRegressor(random_state=20240717)\n",
     "\n",
     "# Fit the data to the model.\n",
-    "rfr.fit(X=X_train, y=y_train)\n",
+    "rfr_base.fit(X=X_train, y=y_train)\n",
     "\n",
     "# Make predictions on the test data.\n",
-    "y_pred = rfr.predict(X=X_test)\n",
+    "y_pred = rfr_base.predict(X=X_test)\n",
     "\n",
     "# Get the metrics.\n",
     "mae = mean_absolute_error(y_true=y_test, y_pred=y_pred)\n",
@@ -307,11 +423,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hypertune and build model with 'Optuna'."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define the 'objective' function.\n",
+    "def objective(trial):\n",
+    "    # Define the hyperparameter space.\n",
+    "    n_estimators = trial.suggest_int(name='n_estimators', low=100, high=1000)\n",
+    "    max_depth = trial.suggest_int(name='max_depth', low=10, high=50)\n",
+    "    min_samples_split = trial.suggest_int(name='min_sample_split', low=2, high=32)\n",
+    "    min_samples_leaf = trial.suggest_int(name='min_sample_leaf', low=1, high=32)\n",
+    "\n",
+    "    # Build the model.\n",
+    "    rfr_optuna = RandomForestRegressor(n_estimators=n_estimators, \n",
+    "                                       max_depth=max_depth,\n",
+    "                                       min_samples_split=min_samples_split, \n",
+    "                                       min_samples_leaf=min_samples_leaf#, random_state=20240717\n",
+    "                                       )\n",
+    "    \n",
+    "    # Get cross-val score\n",
+    "    score_crossval = cross_val_score(estimator=rfr_optuna,\n",
+    "                                     X=X_train, y=y_train,\n",
+    "                                     cv=5, scoring='neg_mean_squared_error', n_jobs=-1)\n",
+    "\n",
+    "    return score_crossval \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create study for the above 'objective'\n",
+    "study = optuna.create_study(sampler=optuna.samplers.RandomSampler(),\n",
+    "                            direction='maximise')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Resources\n",
+    "\n",
+    "1. [sklearn - model evaluation and scoring](https://scikit-learn.org/stable/modules/model_evaluation.html#scoring-parameter)\n",
+    "2. [Optuna - trial.suggest_int](https://optuna.readthedocs.io/en/stable/reference/generated/optuna.trial.Trial.html)\n",
+    "3. [Optuna - create_study](https://optuna.readthedocs.io/en/stable/reference/generated/optuna.study.create_study.html#optuna.study.create_study)"
+   ]
   }
  ],
  "metadata": {
